--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -1,49 +1,32 @@
-:root {
-  --grey1: #bcbcbc;
-  --grey2: #1e2123;
-  --grey3: #232629;
-  --grey4: #31363b;
-  --grey5: #4d4d4d;
-  --blue-1: #3daee9;
-  --blue-1-50: #3daee980;
-  --yellow-1: #fdbc4b;
-  --yellow-2: #c9ce3b;
-  --yellow-1-50: #fdbc4b80;
-  --green-1: #2ecc71;
-  --green-1-50: #2ecc7180;
-  --white-10: rgba(255, 255, 255, 0.1);
-  --white-30: rgba(255, 255, 255, 0.3);
-  --shadow3: 0 1px 1px rgb(0 0 0 / 70%), 0 2px 2px rgb(0 0 0 / 70%);
-  --filter: brightness(80%) hue-rotate(226deg);
-}
-
-body {
-  background-image: none !important;
-  background-color: var(--grey4) !important;
+#search {
+  #main-ico-search {
+    top: 0.2em !important;
+  }
 }
 
 header {
-  background-color: var(--grey3) !important;
+  background-color: var(--grey-3) !important;
   background-image: none !important;
   border-bottom: none !important;
-  box-shadow: var(--shadow3) !important;
+  box-shadow: var(--shadow-3) !important;
 
   .logo {
     filter: var(--filter) !important;
   }
 
   #sitemap {
-    background-color: var(--grey3);
+    background-color: var(--grey-3);
   }
 
-  span {
-    color: var(--grey1);
-    text-shadow: none;
+  @media screen and (min-width: 580px) and (max-width: 1023px) {
+    .navigation {
+      padding-right: 88px;
+    }
   }
 
   button {
-    background-color: var(--grey2) !important;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7), 2px 2px 2px rgba(0, 0, 0, 0.7);
+    background-color: var(--grey-2) !important;
+    box-shadow: var(--shadow-1);
 
     &#search__trigger__mobile {
       margin-right: 16px;
@@ -118,29 +101,30 @@ header {
 
   .navigation-shortcut {
     a {
-      color: var(--grey1);
-      text-shadow: none;
       border-color: var(--white-10);
 
       span {
         background: transparent;
-        color: var(--green-1);
+        color: var(--green-1) !important;
+        padding-left: 14px;
+        padding-right: 0;
       }
     }
-    a:hover {
+    a:hover,
+    a:focus {
       border-color: var(--white-30);
     }
   }
 
   .sitemap--divider {
-    border-top-color: var(--grey4);
+    border-top-color: var(--grey-4);
   }
 
   .sitemap__expandable-chunk:not(.sitemap__expandable-chunk--account) {
-    background-color: var(--grey3);
+    background-color: var(--grey-3);
 
     &::before {
-      background-color: var(--grey3);
+      background-color: var(--grey-3);
     }
 
     &.sitemap__expandable-chunk--radicals,
@@ -148,7 +132,7 @@ header {
     &.sitemap__expandable-chunk--vocabulary {
       span,
       a {
-        color: var(--grey3);
+        color: var(--grey-3) !important;
       }
     }
 
