--- a/src/stylesheets/components/_input.scss
+++ b/src/stylesheets/components/_input.scss
@@ -3,5 +3,5 @@ textarea {
   background-color: var(--grey-2) !important;
   box-shadow: var(--shadow-2) !important;
   transition: box-shadow linear 0.2s !important;
-  border: none !important;
+  border-color: transparent !important;
 }
