--- a/src/stylesheets/components/_text.scss
+++ b/src/stylesheets/components/_text.scss
@@ -1,4 +1,14 @@
-* {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+i,
+a,
+span,
+p,
+time {
   text-shadow: none !important;
 }
 
@@ -11,6 +21,7 @@ h6,
 i,
 a,
 span,
-p {
+p,
+time {
   color: var(--grey-1) !important;
 }
