--- a/src/stylesheets/helpers/_variables.scss
+++ b/src/stylesheets/helpers/_variables.scss
@@ -4,7 +4,7 @@
   --grey-3: #232629;
   --grey-4: #31363b;
   --grey-5: #4d4d4d;
-  --grey-6: #1c1e21;
+  // --grey-6: #1c1e21;
   --blue-1: #3daee9;
   --blue-1-50: #3daee980;
   --blue-2: #0af;
