--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
   --grey-3: #232629;
   --grey-4: #31363b;
   --grey-5: #4d4d4d;
-  --grey-6: #1c1e21;
   --blue-1: #3daee9;
   --blue-1-50: #3daee980;
   --blue-2: #0af;
@@ -25,20 +24,25 @@
   --filter: brightness(80%) hue-rotate(226deg);
 }
 
-body {
+.system-alert {
+  background-color: var(--grey-3) !important;
   background-image: none !important;
+  box-shadow: var(--shadow-1) !important;
+  border-color: transparent !important;
+}
+
+body {
   background-color: var(--grey-4) !important;
+  background-image: none !important;
   color: var(--grey-1) !important;
 }
 
 #main footer,
-#subscriptions footer,
 #public-profile footer {
   background-image: url(https://i.imgur.com/MRVqVnw.png) !important;
   background-position: top !important;
 }
 #main footer ul,
-#subscriptions footer ul,
 #public-profile footer ul {
   -webkit-box-shadow: var(--shadow-1) !important;
   -moz-box-shadow: var(--shadow-1) !important;
@@ -49,17 +53,14 @@ body {
   margin-top: 20px;
 }
 #main footer li,
-#subscriptions footer li,
 #public-profile footer li {
   background-color: transparent !important;
 }
 #main footer li li:last-child,
-#subscriptions footer li li:last-child,
 #public-profile footer li li:last-child {
   background-color: var(--red-1) !important;
 }
 #main footer li:last-child,
-#subscriptions footer li:last-child,
 #public-profile footer li:last-child {
   background-color: var(--red-1) !important;
   border-bottom-right-radius: 5px !important;
@@ -67,14 +68,11 @@ body {
   color: white !important;
 }
 #main footer li:last-child span,
-#subscriptions footer li:last-child span,
 #public-profile footer li:last-child span {
   color: white !important;
 }
 #main footer a,
 #main footer a:hover,
-#subscriptions footer a,
-#subscriptions footer a:hover,
 #public-profile footer a,
 #public-profile footer a:hover {
   background-color: transparent !important;
@@ -82,7 +80,6 @@ body {
   transition: none !important;
 }
 #main footer a:hover,
-#subscriptions footer a:hover,
 #public-profile footer a:hover {
   text-decoration: underline !important;
 }
@@ -94,8 +91,8 @@ body {
 header {
   background-color: var(--grey-3) !important;
   background-image: none !important;
-  border-bottom: none !important;
-  box-shadow: var(--shadow-3) !important;
+  box-shadow: var(--shadow-1) !important;
+  border-bottom-color: transparent !important;
 }
 header .logo {
   filter: var(--filter) !important;
@@ -112,6 +109,9 @@ header button {
   background-color: var(--grey-2) !important;
   box-shadow: var(--shadow-1);
 }
+header button:hover, header button:focus {
+  box-shadow: none;
+}
 header button#search__trigger__mobile {
   margin-right: 16px;
 }
@@ -123,9 +123,6 @@ header button.navigation__toggle:hover {
 }
 header button.navigation__toggle:focus {
   box-shadow: 0px 0 0px 2px var(--white-30);
-}
-header button:hover, header button:focus {
-  box-shadow: none;
 }
 header button:not(.sitemap__section-header--radicals):not(.sitemap__section-header--kanji):not(.sitemap__section-header--vocabulary):hover, header button.navigation__toggle:not(#search__trigger)[data-expanded=true]:hover {
   border-color: var(--white-10);
@@ -158,18 +155,22 @@ header button.sitemap__section-header--vocabulary[data-expanded=true], header bu
 header button:not(.sitemap__section-header--radicals):not(.sitemap__section-header--kanji):not(.sitemap__section-header--vocabulary):not(#search__trigger):not(#search__trigger__mobile)[data-expanded=true], header button:not(.sitemap__section-header--radicals):not(.sitemap__section-header--kanji):not(.sitemap__section-header--vocabulary):focus, header button.navigation__toggle:focus {
   border-color: var(--white-30);
 }
-header .navigation-shortcut a {
+header .navigation-shortcut a,
+header .navigation-shortcut[data-count="0"] a {
   border-color: var(--white-10);
 }
-header .navigation-shortcut a span {
+header .navigation-shortcut a:focus, header .navigation-shortcut a:hover,
+header .navigation-shortcut[data-count="0"] a:focus,
+header .navigation-shortcut[data-count="0"] a:hover {
+  border-color: var(--white-30);
+}
+header .navigation-shortcut a span,
+header .navigation-shortcut[data-count="0"] a span {
   background: transparent;
   color: var(--green-1) !important;
   padding-left: 14px;
   padding-right: 0;
-}
-header .navigation-shortcut a:hover,
-header .navigation-shortcut a:focus {
-  border-color: var(--white-30);
+  margin-right: 12px;
 }
 header .sitemap--divider {
   border-top-color: var(--grey-4);
@@ -210,7 +211,7 @@ textarea {
   background-color: var(--grey-2) !important;
   box-shadow: var(--shadow-2) !important;
   transition: box-shadow linear 0.2s !important;
-  border: none !important;
+  border-color: transparent !important;
 }
 
 .popover .popover-content ul li {
@@ -272,7 +273,17 @@ html {
   background-color: var(--grey-5);
 }
 
-* {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+i,
+a,
+span,
+p,
+time {
   text-shadow: none !important;
 }
 
@@ -285,7 +296,8 @@ h6,
 i,
 a,
 span,
-p {
+p,
+time {
   color: var(--grey-1) !important;
 }
 
@@ -295,11 +307,11 @@ p {
 #guru,
 #master,
 #enlightened,
-#burned {
-  -webkit-box-shadow: var(--shadow-1) !important;
-  -moz-box-shadow: var(--shadow-1) !important;
-  box-shadow: var(--shadow-1) !important;
+#burned,
+.dashboard-sub-section {
   background-color: var(--grey-3) !important;
+  background-image: none !important;
+  box-shadow: var(--shadow-1) !important;
 }
 
 .lessons-and-reviews__button {
@@ -323,7 +335,6 @@ p {
   background-color: var(--grey-2) !important;
   box-shadow: var(--shadow-2) !important;
   transition: box-shadow linear 0.2s !important;
-  border: none !important;
 }
 .dashboard-progress .progress-bar__progress {
   background-color: var(--yellow-1) !important;
@@ -336,7 +347,6 @@ p {
 }
 .dashboard-progress .progress-entry a {
   color: var(--grey-3) !important;
-  text-shadow: none !important;
   box-shadow: var(--shadow-1) !important;
 }
 .dashboard-progress .progress-entry a.radical-icon div,
@@ -397,14 +407,6 @@ p {
   border-right-color: var(--grey-4);
 }
 
-#apprentice,
-#guru,
-#master,
-#enlightened,
-#burned {
-  background-image: none;
-}
-
 #apprentice span {
   color: var(--blue-1) !important;
 }
@@ -426,10 +428,6 @@ p {
 }
 
 .dashboard-sub-section {
-  -webkit-box-shadow: var(--shadow-1) !important;
-  -moz-box-shadow: var(--shadow-1) !important;
-  box-shadow: var(--shadow-1) !important;
-  background-color: var(--grey-3) !important;
   border-radius: 5px;
 }
 .dashboard-sub-section .see-more {
@@ -460,9 +458,10 @@ p {
 }
 
 .forum-topics-list h3 {
-  align-items: center !important;
   background-color: var(--grey-3) !important;
+  background-image: none !important;
   box-shadow: var(--shadow-1) !important;
+  align-items: center !important;
   color: var(--grey-1) !important;
   display: flex !important;
   margin-bottom: 3px !important;
@@ -470,7 +469,6 @@ p {
   padding-bottom: 3px !important;
   padding-top: 3px !important;
   text-align: left !important;
-  background-image: none !important;
 }
 .forum-topics-list .heading-symbol {
   margin-top: 0px !important;
