:sparkles: lessons pt.1

--- a/src/stylesheets/components/_footer.scss
+++ b/src/stylesheets/components/_footer.scss
@@ -45,3 +45,18 @@
     text-decoration: underline !important;
   }
 }
+
+#lessons-hotkey-footer {
+  #hotkeys {
+    @include button;
+  }
+
+  #report-errors {
+    @include button;
+
+    button {
+      background-color: inherit !important;
+      border-radius: inherit !important;
+    }
+  }
+}
