--- a/src/stylesheets/components/_input.scss
+++ b/src/stylesheets/components/_input.scss
@@ -5,3 +5,7 @@ textarea {
   transition: box-shadow linear 0.2s !important;
   border-color: transparent !important;
 }
+
+button {
+  border-radius: 5px;
+}
