--- a/src/stylesheets/pages/_dashboard.scss
+++ b/src/stylesheets/pages/_dashboard.scss
@@ -106,6 +106,7 @@
       }
 
       &-label {
+        background-color: var(--grey-3) !important;
         border-bottom: 1px solid var(--grey-4);
         border-radius: 0;
         padding-bottom: 12px;
