--- a/src/stylesheets/helpers/_variables.scss
+++ b/src/stylesheets/helpers/_variables.scss
@@ -24,5 +24,6 @@
     2px 2px 2px rgba(0, 0, 0, 0.7) inset;
   --shadow-3: 0 1px 1px rgb(0 0 0 / 70%), 0 2px 2px rgb(0 0 0 / 70%);
   --shadow-4: 0 -1px 1px rgba(0, 0, 0, 0.7);
+  --shadow-5: 0 1px 1px rgba(0, 0, 0, 0.7), 0 2px 2px rgba(0, 0, 0, 0.7);
   --filter: brightness(80%) hue-rotate(226deg);
 }
