--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,5 @@
 // ### Helpers ###
+@import "helpers/highlight";
 @import "helpers/mixins";
 @import "helpers/variables";
 
@@ -8,9 +9,11 @@
 @import "components/footer";
 @import "components/header";
 @import "components/input";
+@import "components/loading";
 @import "components/popover";
 @import "components/scrollbar";
 @import "components/text";
 
 // ### Pages ###
 @import "pages/dashboard";
+@import "pages/lessons";
