--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,9 +11,10 @@
 @import "components/input";
 @import "components/loading";
 @import "components/popover";
-@import "components/scrollbar";
+// @import "components/scrollbar";
 @import "components/text";
 
 // ### Pages ###
 @import "pages/dashboard";
 @import "pages/lessons";
+@import "pages/reviews";
