--- a/src/stylesheets/helpers/_variables.scss
+++ b/src/stylesheets/helpers/_variables.scss
@@ -17,6 +17,7 @@
   // --green-2: #1cdc9a;
   --orange-1: #f67400;
   --red-1: #da4453;
+  --red-2: #ed1515;
   --white-10: rgba(255, 255, 255, 0.1);
   --white-30: rgba(255, 255, 255, 0.3);
   --shadow-1: 1px 1px 1px rgba(0, 0, 0, 0.7), 2px 2px 2px rgba(0, 0, 0, 0.7);
